--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "husky": "^8.0.2",
     "jest": "^27.5.1",
     "jest-extended": "^2.0.0",
+    "jest-sorted": "^1.0.14",
+    "nodemon": "^3.0.3",
     "pg-format": "^1.0.4",
     "supertest": "^6.3.4"
   },
@@ -33,7 +35,7 @@
   },
   "jest": {
     "setupFilesAfterEnv": [
-      "jest-extended/all"
+      "jest-extended/all" , "jest-sorted"
     ]
   }
 }
