--- a/package.json
+++ b/package.json
@@ -32,13 +32,15 @@
     "supertest": "^6.3.4"
   },
   "dependencies": {
-    "husky": "^8.0.2",
     "dotenv": "^16.0.0",
+    "express": "^4.18.2",
+    "husky": "^8.0.2",
     "pg": "^8.11.3"
   },
   "jest": {
     "setupFilesAfterEnv": [
-      "jest-extended/all" , "jest-sorted"
+      "jest-extended/all",
+      "jest-sorted"
     ]
   }
 }
